...
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="sortnote">Sort note</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string> <!-- Unlink from Dropbox -->
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="new_">New</string> <!-- "new" is reserved -->
    <string name="select">Select</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="not_now">Not now</string>
...
    <string name="edit">Edit</string>
    <string name="edit_note">Edit note</string>
    <string name="delete">Delete</string>
    <string name="delete_with_quoted_argument">Delete “%s”</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
...
    <string name="heads_moving_action_menu_item_up">Up</string>
    <string name="heads_moving_action_menu_item_demote">Demote</string>
    <string name="new_note">New note</string>
    <string name="quick_note">Quick note</string>
    <string name="tap_to_create_new_note">Tap to create a new note</string>
...
    <string name="book_last_action">Notebook last action</string>
    <string name="book_notes_count">Notes count</string>
    <string name="pref_title_notebooks">Notes &amp; Notebooks</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
...
    <string name="next_state">Next State</string>
    <string name="new_above">New above</string>
    <string name="new_under">New under</string>
    <string name="new_below">New below</string>

...

    <string name="note_book_not_set">Notebook not set</string>
    <string name="title_can_not_be_empty">Title cannot be empty</string>
    <string name="can_not_be_empty">Cannot be empty</string>
    <string name="invalid_url">Invalid URL</string>
...
    <string name="running_database_update">Upgrading database…</string>
    <string name="note_has_been_modified">Note modified</string>
    <string name="discard_or_save_changes">Save changes?</string>
    <string name="rename">Rename</string>
    <string name="rename_book">Rename %s</string>
...
    <string name="priority_with_argument">Priority %s</string>
    <string name="default_priority">Default priority</string>
    <string name="lowest_priority">Lowest priority</string>

    <string name="todo_states">Keywords for active (todo) tasks</string>
...
    <string name="preface_in_book_few_lines">Display few lines</string>

    <string name="created_property_name">CREATED</string>

    <string name="separate_notes_with_new_line_always">Always</string>
...
    <string name="update_frequency">Update frequency</string>
    <string name="git">Git</string>
    <string name="metadata">Metadata</string>
    <string name="selected_metadata_summary">Metadata you can choose to always display in note</string>
    <string name="show_all">Show all</string>
    <string name="always_show_set">Always show set</string>
    <string name="show_selected">Show selected</string>
    <string name="hide_all">Hide all</string>

...
    <string name="overdue">Overdue</string>
    <string name="help">Help</string>
    <string name="content">Content</string>

    <string name="prepend">Prepend</string>
...
