...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CoordinatorLayoutFitsSystemWindows">

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical">

            <!-- Entire note -->
...
                    android:paddingVertical="12dp"
                    android:layout_marginStart="@dimen/screen_edge"
                    android:layout_marginEnd="@dimen/screen_edge"
                    android:scrollbars="none">

                    <TextView
                        android:id="@+id/breadcrumbs_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:linksClickable="true"
                        android:textSize="?attr/fragment_note_content_text_size"
...
                        style="@style/NoteFragmentMetadataItemValueButton"
                        tools:text="Inbox"/>
                </LinearLayout>

                <!-- Title -->
                <com.orgzly.android.ui.views.richtext.RichText
                    android:id="@+id/title"
                    app:view_id="@+id/title_view"
                    app:edit_id="@+id/title_edit"
                    app:parse_checkboxes="false"
                    app:paddingHorizontal="@dimen/screen_edge"
                    app:paddingVertical="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone|flagNoFullscreen"
...

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_flag" />
                        <TextView
                            android:id="@+id/state_button"
                            style="@style/NoteFragmentMetadataItemValueButton"
                            android:hint="@string/state"
                            tools:text="TODO"/>
                        <ImageButton
                            android:id="@+id/state_remove"
                            style="@style/NoteFragmentMetadataItemButton"
                            android:src="@drawable/ic_close" />
                    </LinearLayout>

...

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_star_border" />
                        <TextView
                            android:id="@+id/priority_button"
                            style="@style/NoteFragmentMetadataItemValueButton"
                            android:hint="@string/priority"
                            tools:text="Priority A"/>
                        <ImageButton
                            android:id="@+id/priority_remove"
                            style="@style/NoteFragmentMetadataItemButton"
...

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_today" />
                        <TextView
                            android:id="@+id/scheduled_button"
                            style="@style/NoteFragmentMetadataItemValueButton"
                            android:hint="@string/schedule_button_hint"/>
                        <ImageButton
                            android:id="@+id/scheduled_remove"
                            style="@style/NoteFragmentMetadataItemButton"
                            android:src="@drawable/ic_close" />
...

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_alarm" />
                        <TextView
                            android:id="@+id/deadline_button"
                            style="@style/NoteFragmentMetadataItemValueButton"
                            android:hint="@string/deadline_button_hint"
                            tools:text="@string/note_deadline_sample"/>
                        <ImageButton
                            android:id="@+id/deadline_remove"
                            style="@style/NoteFragmentMetadataItemButton"
...

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_check_circle_outline" />
                        <TextView
                            android:id="@+id/closed_button"
                            style="@style/NoteFragmentMetadataItemValueButton"
                            android:hint="@string/closed_button_hint"/>
                        <ImageButton
                            android:id="@+id/closed_remove"
                            style="@style/NoteFragmentMetadataItemButton"
                            android:src="@drawable/ic_close" />
...
                </LinearLayout>

                <!-- Content -->
                <com.orgzly.android.ui.views.richtext.RichText
                    android:id="@+id/content"
                    app:view_id="@+id/content_view"
                    app:edit_id="@+id/content_edit"
                    app:paddingHorizontal="@dimen/screen_edge"
                    app:paddingVertical="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="text|textCapSentences|textMultiLine"
...
